# gtlab-core

./: .bumpversion.cfg  .bumpversion.cfg.license  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  conanfile.py  cppcheck.suppress  deployment.pri  gtlab.pro  settings.pri  style.astylerc  update_copyright.py  vcpkg-configuration.json  vcpkg.json
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Readme.md  api.rst  building.rst  changelog.rst  concept.rst  conf.py  conf.py.in  faq.rst  index.rst  requirements.txt
docs/basics/: building.rst  data_modelling.rst  process_elements.rst
docs/dev/: Doxyfile  api.rst  changelog.rst  conf.py  index.rst
docs/modules/: about.rst  interfaces.rst  logging.rst
docs/user/: .readthedocs.yml  conf.py  devdoc.rst  faq.rst  index.rst
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.pro  gt_mainwin.cpp  gt_mainwin.h  icon.ico.license
src/batch/: CMakeLists.txt  batch.cpp  batch.pro  batchremote.cpp  batchremote.h  gt_consoleparser.cpp  gt_consoleparser.h  gt_consolerunprocess.cpp  gt_consolerunprocess.h  gt_consoleupgradeproject.cpp  gt_consoleupgradeproject.h  gt_remoteprocessrunner.cpp  gt_remoteprocessrunner.h  gt_remoteprocessrunnerstates.cpp  gt_remoteprocessrunnerstates.h
src/calculators/: CMakeLists.txt  calculators.pro  gt_abstractcalculatorexecutor.h  gt_abstractprocessdata.h  gt_abstractprocessprovider.cpp  gt_abstractprocessprovider.h  gt_abstractrunnable.cpp  gt_abstractrunnable.h  gt_calculator.cpp  gt_calculator.h  gt_calculatordata.cpp  gt_calculatordata.h  gt_calculatorexecinterface.h  gt_calculatorexecutorlist.cpp  gt_calculatorexecutorlist.h  gt_calculatorfactory.cpp  gt_calculatorfactory.h  gt_calculatorhelperfactory.cpp  gt_calculatorhelperfactory.h  gt_calculatorprovider.h  gt_doublemonitoringproperty.h  gt_environment.h  gt_evaluator.cpp  gt_evaluator.h  gt_intmonitoringproperty.cpp  gt_intmonitoringproperty.h  gt_loop.h  gt_monitoringdata.cpp  gt_monitoringdata.h  gt_monitoringdataset.cpp  gt_monitoringdataset.h  gt_monitoringdatatable.h  gt_parameterloop.cpp  gt_parameterloop.h  gt_processcomponent.cpp  gt_processcomponent.h  gt_processdata.cpp  gt_processdata.h  gt_processfactory.cpp  gt_processfactory.h  (+17 more)
src/core/: CMakeLists.txt  core.pro  gt_abstractloadinghelper.cpp  gt_abstractloadinghelper.h  gt_accesstracking.cpp  gt_accesstracking.h  gt_batchsaver.cpp  gt_batchsaver.h  gt_checkablestringlistmodel.cpp  gt_checkablestringlistmodel.h  gt_command.cpp  gt_command.h  gt_commandlinefunction.cpp  gt_commandlinefunction.h  gt_commandlineparser.cpp  gt_commandlineparser.h  gt_commandlinescriptrunner.cpp  gt_commandlinescriptrunner.h  gt_commandlinetemplatefinder.cpp  gt_commandlinetemplatefinder.h  gt_commandlinetemplaterendering.cpp  gt_commandlinetemplaterendering.h  gt_core_exports.h  gt_coreapplication.cpp  gt_coreapplication.h  gt_coredatamodel.cpp  gt_coredatamodel.h  gt_coremoduleloader.cpp  gt_coremoduleloader.h  gt_coreprocessdatamodel.cpp  gt_coreprocessdatamodel.h  gt_coreprocessexecutor.cpp  gt_coreprocessexecutor.h  gt_datamodelinterface.h  gt_dynamicinterface.cpp  gt_dynamicinterface.h  gt_explorermodel.cpp  gt_explorermodel.h  gt_filesystem.cpp  gt_filesystem.h  (+48 more)
src/datamodel/: CMakeLists.txt  datamodel.pro  gt_abstractdatazone.cpp  gt_abstractdatazone.h  gt_abstractobjectfactory.cpp  gt_abstractobjectfactory.h  gt_bleedtable.cpp  gt_bleedtable.h  gt_controlschedule.cpp  gt_controlschedule.h  gt_controlschedulegroup.cpp  gt_controlschedulegroup.h  gt_controlscheduleparser.cpp  gt_controlscheduleparser.h  gt_datamodelmodule.h  gt_datazone.cpp  gt_datazone.h  gt_datazone0d.cpp  gt_datazone0d.h  gt_datazonetable.cpp  gt_datazonetable.h  gt_datazonetablelist.cpp  gt_datazonetablelist.h  gt_datazonetablemainaxis.cpp  gt_dummyobject.cpp  gt_dummyobject.h  gt_externalizationsettings.cpp  gt_externalizationsettings.h  gt_externalizedh5object.h  gt_externalizedobject.cpp  gt_externalizedobject.h  gt_externalizedobjecthelper.h  gt_factorygroup.cpp  gt_factorygroup.h  gt_init_dp.cpp  gt_label.h  gt_labeldata.h  gt_moduleinterface.h  gt_moduleloader.cpp  gt_moduleloader.h  (+37 more)
src/dataprocessor/: CMakeLists.txt  dataprocessor.pro  gt_abstractdatazone.cpp  gt_abstractdatazone.h  gt_abstractexternalizationinterface.cpp  gt_abstractexternalizationinterface.h  gt_abstractobjectfactory.cpp  gt_abstractobjectfactory.h  gt_accesstracking.cpp  gt_accesstracking.h  gt_algorithms.h  gt_batchsaver.cpp  gt_batchsaver.h  gt_boundaries.h  gt_datamodel_exports.h  gt_datamodelinterface.h  gt_datamodelmodule.cpp  gt_datamodelmodule.h  gt_datazone.cpp  gt_datazone.h  gt_datazone0d.cpp  gt_datazone0d.h  gt_datazonetable.cpp  gt_datazonetable.h  gt_datazonetablelist.cpp  gt_datazonetablelist.h  gt_datazonetablemainaxis.cpp  gt_datazonetablemainaxis.h  gt_dummyobject.cpp  gt_dummyobject.h  gt_dynamicinterface.h  gt_dynamicinterfacehandler.cpp  gt_dynamicinterfacehandler.h  gt_eventloop.cpp  gt_eventloop.h  gt_exceptions.cpp  gt_exceptions.h  gt_externalizationmanager.cpp  gt_externalizationmanager.h  gt_externalizationsettings.cpp  (+79 more)
src/gui/: CMakeLists.txt  gt_application.cpp  gt_application.h  gt_applicationprivate.cpp  gt_applicationprivate.h  gt_collectioninterface.h  gt_colors.cpp  gt_colors.h  gt_customprocesswizard.cpp  gt_customprocesswizard.h  gt_datamodel.cpp  gt_datamodel.h  gt_dockwidget.cpp  gt_dockwidget.h  gt_extendedcalculatordata.cpp  gt_extendedcalculatordata.h  gt_extendedtaskdata.cpp  gt_extendedtaskdata.h  gt_finishedprocessloadinghelper.cpp  gt_finishedprocessloadinghelper.h  gt_gui_exports.h  gt_guimoduleloader.cpp  gt_guimoduleloader.h  gt_guiutilities.cpp  gt_guiutilities.h  gt_icons.cpp  gt_icons.h  gt_mainwin.cpp  gt_mainwin.h  gt_mdi_exports.h  gt_mdiinterface.h  gt_mdiitem.cpp  gt_mdiitem.h  gt_mdilauncher.cpp  gt_mdilauncher.h  gt_objectchangedevent.cpp  gt_objectchangedevent.h  gt_objectui.cpp  gt_objectui.h  gt_objectuiaction.cpp  (+35 more)
src/mdi/: CMakeLists.txt  gt_application.cpp  gt_application.h  (+56 more)
(+1597 files in other folders)
